--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ body {
   left: calc(50% - 100px);
   transform-style: preserve-3d;
   transform: perspective(1000px);
-  animation: autoRun 20s linear infinite;
+  animation: autoRun 60s linear infinite;
   z-index: 1;
 }
 @keyframes autoRun{
@@ -33,12 +33,28 @@ body {
   }
 }
 
+.slider:hover {
+  animation-play-state: paused;
+}
 .banner .slider .item {
   position: absolute;
   inset: 0 0 0 0;
   transform:
     rotateY(calc((var(--position) - 1) * (360 /var(--quantity)) * 1deg))
     translateZ(550px);
+}
+.item {
+  border: 3px solid black;
+  border-radius: 5px;
+  overflow: hidden;
+  box-shadow: 3px 3px 3px black, 0 0 25px #25283B, 0 0  5px #25283B;
+}
+
+.item:hover {
+  border: 4px solid rgb(88, 88, 88);
+  border-radius: 5px;
+  overflow: hidden;
+  box-shadow: 4px 4px 4px rgb(88, 88, 88), 0 0 30px rgb(120, 120, 120), 0 0  10px rgb(159, 159, 159);
 }
 .banner .slider .item img {
   width: 100%;
