--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,13 @@
 body {
   margin: 0;
   padding: 0;
+  background-image: url(https://besthqwallpapers.com/Uploads/7-3-2022/192595/league-of-legends-logo-gray-creative-background-league-of-legends-emblem-gray-paper-texture-league-of-legends.jpg);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  background-position: center;
+  background-size: 105%;
+  background-repeat: no-repeat;
 }
 
 .banner {
